<resources>
    <string name="app_name">Practice</string>
    <string name="error_code_none">None</string>
    <string name="error_code_4">Blocked user access</string>
    <string name="error_code_11">Access token is missing</string>
    <string name="error_code_12">Invalid access token</string>
    <string name="error_code_40">Invalid API permission</string>
    <string name="error_code_50">Authenticate error</string>
    <string name="error_code_51">Invalid API</string>
    <string name="error_code_52">Deprecated API</string>
    <string name="error_code_53">Two Factor Auth Fail</string>
    <string name="error_code_100">Session expired</string>
    <string name="error_code_101">Invalid format</string>
    <string name="error_code_102">ID is not exist</string>
    <string name="error_code_103">Lack of Balance</string>
    <string name="error_code_104">Order id is not exist</string>
    <string name="error_code_105">Price is not correct</string>
    <string name="error_code_106">Locking error</string>
    <string name="error_code_107">Parameter error</string>
    <string name="error_code_111">Order id is not exist</string>
    <string name="error_code_112">Cancel failed</string>
    <string name="error_code_113">Quantity is too low(ETH, ETC > 0.01)</string>
    <string name="error_code_120">V2 API payload is missing</string>
    <string name="error_code_121">V2 API signature is missing</string>
    <string name="error_code_122">V2 API nonce is missing</string>
    <string name="error_code_123">V2 API signature is not correct</string>
    <string name="error_code_130">V2 API Nonce value must be a positive integer</string>
    <string name="error_code_131">V2 API Nonce is must be bigger then last nonce</string>
    <string name="error_code_132">V2 API body is corrupted</string>
    <string name="error_code_141">Too many limit orders</string>
    <string name="error_code_150">"It's V1 API. V2 Access token is not acceptable"</string>
    <string name="error_code_151">"It's V2 API. V1 Access token is not acceptable"</string>
    <string name="error_code_200">Wallet Error</string>
    <string name="error_code_202">Limitation error</string>
    <string name="error_code_210">Limitation error</string>
    <string name="error_code_220">Limitation error</string>
    <string name="error_code_221">Limitation error</string>
    <string name="error_code_310">Mobile auth error</string>
    <string name="error_code_311">Need mobile auth</string>
    <string name="error_code_312">Name is not correct</string>
    <string name="error_code_330">Phone number error</string>
    <string name="error_code_404">Page not found error</string>
    <string name="error_code_405">Server error</string>
    <string name="error_code_444">Locking error</string>
    <string name="error_code_500">Email error</string>
    <string name="error_code_501">Email error</string>
    <string name="error_code_777">Mobile auth error</string>
    <string name="error_code_778">Phone number error</string>
    <string name="error_code_779">Address error</string>
    <string name="error_code_1202">App not found</string>
    <string name="error_code_1203">Already registered</string>
    <string name="error_code_1204">Invalid access</string>
    <string name="error_code_1205">API Key error</string>
    <string name="error_code_1206">User not found</string>
    <string name="error_code_1207">User not found</string>
    <string name="error_code_1208">User not found</string>
    <string name="error_code_1209">User not found</string>
    <string name="term_million">"'%s' 백만"</string>
    <string name="term_minus">"-%s"</string>
    <string name="activity_order_book_number_of_shares_remaining">매수 잔량</string>
    <string name="activity_order_book_purchase_order">매수 주문</string>
    <string name="activity_order_book_current_price">현재가</string>
    <string name="activity_order_book_previous_day_price">전일가</string>
    <string name="activity_order_book_day_before_price">전일대비</string>
    <string name="activity_order_book_high_price">고가</string>
    <string name="activity_order_book_low_price">저가</string>
    <string name="activity_order_book_transaction_price">거래대금</string>
    <string name="activity_order_book_price">가격</string>
    <string name="activity_order_book_remaining">매도 / 매수 잔량</string>
</resources>
